--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_download_file_a.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_download_file_a.default.yml
@@ -11,7 +11,7 @@ dependencies:
     - field.field.paragraph.block_download_file_a.field_styles
     - paragraphs.paragraphs_type.block_download_file_a
   module:
-    - entity_reference_revisions
+    - paragraphs
     - text
 id: paragraph.block_download_file_a.default
 targetEntityType: paragraph
@@ -29,20 +29,26 @@ content:
   field_link:
     weight: 5
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_new_heading:
     weight: 2
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_paragraph:
     weight: 3
@@ -63,11 +69,14 @@ content:
   field_styles:
     weight: 0
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
 hidden:
   created: true
