--- a/source/drupal/var/drupal-config/sync/core.entity_view_display.paragraph.block_product_list.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_view_display.paragraph.block_product_list.default.yml
@@ -3,25 +3,43 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.block_product_list.field_product_items
+    - field.field.paragraph.block_product_list.field_articles
+    - field.field.paragraph.block_product_list.field_new_heading
+    - field.field.paragraph.block_product_list.field_paragraph
     - field.field.paragraph.block_product_list.field_scroll_id
     - field.field.paragraph.block_product_list.field_styles
     - paragraphs.paragraphs_type.block_product_list
   module:
     - entity_reference_revisions
+    - text
 id: paragraph.block_product_list.default
 targetEntityType: paragraph
 bundle: block_product_list
 mode: default
 content:
-  field_product_items:
+  field_articles:
     weight: 0
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_new_heading:
+    weight: 1
     label: above
     settings:
       view_mode: default
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+    region: content
+  field_paragraph:
+    weight: 2
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
     region: content
 hidden:
   field_scroll_id: true
