--- a/source/drupal/var/drupal-config/sync/field.field.paragraph.block_product_list.field_new_heading.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.paragraph.block_product_list.field_new_heading.yml
@@ -1,18 +1,18 @@
-uuid: 5f161d6e-8960-4951-beaf-24fd54c6e398
+uuid: 8f2004bf-176a-4c7e-9f68-1f21bbbd663c
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_product_items
+    - field.storage.paragraph.field_new_heading
     - paragraphs.paragraphs_type.block_product_list
-    - paragraphs.paragraphs_type.product_item
+    - paragraphs.paragraphs_type.heading
   module:
     - entity_reference_revisions
-id: paragraph.block_product_list.field_product_items
-field_name: field_product_items
+id: paragraph.block_product_list.field_new_heading
+field_name: field_new_heading
 entity_type: paragraph
 bundle: block_product_list
-label: Items
+label: Heading
 description: ''
 required: true
 translatable: true
@@ -22,291 +22,297 @@ settings:
   handler: 'default:paragraph'
   handler_settings:
     target_bundles:
-      product_item: product_item
+      heading: heading
     target_bundles_drag_drop:
-      audience_statistics_item:
-        weight: 96
-        enabled: false
-      background_image:
-        weight: 97
-        enabled: false
-      block_audience_product_top:
+      block_product_list:
         weight: 98
         enabled: false
-      block_audience_quote:
+      audience_statistics_item:
         weight: 99
         enabled: false
-      block_audience_reach:
+      background_image:
         weight: 100
         enabled: false
-      block_audience_statistics:
+      block_audience_product_top:
         weight: 101
         enabled: false
-      block_audience_statistics_b:
+      block_audience_quote:
         weight: 102
         enabled: false
-      block_audience_top_programming:
+      block_audience_reach:
         weight: 103
         enabled: false
-      block_blog_post_b:
+      block_audience_statistics:
         weight: 104
         enabled: false
-      block_core_product_message:
+      block_audience_statistics_b:
         weight: 105
         enabled: false
-      block_double_image:
+      block_audience_top_programming:
         weight: 106
         enabled: false
-      block_download_file_a:
+      block_blog_post_b:
         weight: 107
         enabled: false
-      block_download_file_b:
+      block_core_product_message:
         weight: 108
         enabled: false
-      block_find_your_audience:
+      block_double_image:
         weight: 109
         enabled: false
-      block_glossary_a:
+      block_download_file_a:
         weight: 110
         enabled: false
-      block_glossary_b:
+      block_download_file_b:
         weight: 111
         enabled: false
-      block_hero_quaternary:
+      block_find_your_audience:
         weight: 112
         enabled: false
-      block_hero_quinary:
+      block_glossary_a:
         weight: 113
         enabled: false
-      block_image_with_content_b:
+      block_glossary_b:
         weight: 114
         enabled: false
-      block_image_with_content_c:
+      block_hero_quaternary:
         weight: 115
         enabled: false
-      block_infographic:
+      block_hero_quinary:
         weight: 116
         enabled: false
-      block_large_video:
+      block_image_with_content_b:
         weight: 117
         enabled: false
-      block_main_product_nav:
+      block_image_with_content_c:
         weight: 118
         enabled: false
-      block_map_tertiary:
+      block_infographic:
         weight: 119
         enabled: false
-      block_multiple_images:
+      block_large_video:
         weight: 120
         enabled: false
-      block_pdf:
+      block_main_product_nav:
         weight: 121
         enabled: false
-      block_persona_selector_banner:
+      block_map_tertiary:
         weight: 122
         enabled: false
-      block_product_list:
+      block_multiple_images:
         weight: 123
         enabled: false
-      block_show_detail:
+      block_pdf:
         weight: 124
         enabled: false
-      block_success_stories_a:
+      block_persona_selector_banner:
         weight: 125
         enabled: false
-      block_success_stories_b:
+      block_show_detail:
         weight: 126
         enabled: false
-      block_success_story_highlight:
+      block_success_stories_a:
         weight: 127
         enabled: false
-      block_success_story_impact:
+      block_success_stories_b:
         weight: 128
         enabled: false
-      block_success_story_post:
+      block_success_story_highlight:
         weight: 129
         enabled: false
-      block_target_audience:
+      block_success_story_impact:
         weight: 130
         enabled: false
-      block_twitter_feed:
+      block_success_story_post:
         weight: 131
         enabled: false
-      block_video_with_call_to_actions:
+      block_target_audience:
         weight: 132
         enabled: false
-      block_video_with_content_b:
+      block_triple_content:
         weight: 133
         enabled: false
-      block_video_with_content_c:
+      block_twitter_feed:
         weight: 134
         enabled: false
-      blockarticleteaser:
+      block_video_with_call_to_actions:
         weight: 135
         enabled: false
-      blockaudiofragment:
+      block_video_with_content_b:
         weight: 136
         enabled: false
-      blockblogpost:
+      block_video_with_content_c:
         weight: 137
         enabled: false
-      blockbutton:
+      blockarticleteaser:
         weight: 138
         enabled: false
-      blockfiltercontent:
+      blockaudiofragment:
         weight: 139
         enabled: false
-      blockheromain:
+      blockblogpost:
         weight: 140
         enabled: false
-      blockherosecondary:
+      blockbutton:
         weight: 141
         enabled: false
-      blockherotertiary:
+      blockfiltercontent:
         weight: 142
         enabled: false
-      blockhowtoadvertise:
+      blockheromain:
         weight: 143
         enabled: false
-      blockimagecalltoactions:
+      blockherosecondary:
         weight: 144
         enabled: false
-      blockimagecarousel:
+      blockherotertiary:
         weight: 145
         enabled: false
-      blockimagewithcontent:
+      blockhowtoadvertise:
         weight: 146
         enabled: false
-      blockinfo:
+      blockimagecalltoactions:
         weight: 147
         enabled: false
-      blocklatest:
+      blockimagecarousel:
         weight: 148
         enabled: false
-      blockmap:
+      blockimagewithcontent:
         weight: 149
         enabled: false
-      blockmapsecondary:
+      blockinfo:
         weight: 150
         enabled: false
-      blockmarketmap:
+      blocklatest:
         weight: 151
         enabled: false
-      blockmore:
+      blockmap:
         weight: 152
         enabled: false
-      blocknetworkoverview:
+      blockmapsecondary:
         weight: 153
         enabled: false
-      blockpagenotfound:
+      blockmarketmap:
         weight: 154
         enabled: false
-      blockpathtopurchase:
+      blockmore:
         weight: 155
         enabled: false
-      blockpersonaselector:
+      blocknetworkoverview:
         weight: 156
         enabled: false
-      blockprogrammodule:
+      blockpagenotfound:
         weight: 157
         enabled: false
-      blockquote:
+      blockpathtopurchase:
         weight: 158
         enabled: false
-      blockquotesecondary:
+      blockpersonaselector:
         weight: 159
         enabled: false
-      blocksmallheading:
+      blockprogrammodule:
         weight: 160
         enabled: false
-      blocksmallimage:
+      blockquote:
         weight: 161
         enabled: false
-      blocksmallinfo:
+      blockquotesecondary:
         weight: 162
         enabled: false
-      blockstoryinfoimages:
+      blocksmallheading:
         weight: 163
         enabled: false
-      blocktext:
+      blocksmallimage:
         weight: 164
         enabled: false
-      broadcastschedule:
+      blocksmallinfo:
         weight: 165
         enabled: false
-      calltoaction:
+      blockstoryinfoimages:
         weight: 166
         enabled: false
-      channel:
+      blocktext:
         weight: 167
         enabled: false
-      core_product_message_item:
+      blog_post_item:
         weight: 168
         enabled: false
-      device:
+      broadcastschedule:
         weight: 169
         enabled: false
-      glossary_a_item:
+      calltoaction:
         weight: 170
         enabled: false
-      heading:
+      channel:
         weight: 171
         enabled: false
-      image:
+      core_product_message_item:
         weight: 172
         enabled: false
-      link:
+      device:
         weight: 173
         enabled: false
-      main_product_item:
+      glossary_a_item:
         weight: 174
         enabled: false
-      map_tertiary_data:
+      heading:
+        enabled: true
         weight: 175
-        enabled: false
-      networkoverviewitem:
+      image:
         weight: 176
         enabled: false
-      personas:
+      link:
         weight: 177
         enabled: false
-      poster:
+      main_product_item:
         weight: 178
         enabled: false
-      product_item:
-        enabled: true
+      map_tertiary_data:
         weight: 179
-      program:
+        enabled: false
+      networkoverviewitem:
         weight: 180
         enabled: false
-      showmetric:
+      personas:
         weight: 181
         enabled: false
-      slide:
+      poster:
         weight: 182
         enabled: false
-      slideheromain:
+      program:
         weight: 183
         enabled: false
-      stat:
+      showmetric:
         weight: 184
         enabled: false
-      statistic:
+      slide:
         weight: 185
         enabled: false
-      step:
+      slideheromain:
         weight: 186
         enabled: false
-      stepmap:
+      stat:
         weight: 187
         enabled: false
-      steppurchase:
+      statistic:
         weight: 188
         enabled: false
-      stories:
+      step:
         weight: 189
         enabled: false
-      styles:
+      stepmap:
         weight: 190
+        enabled: false
+      steppurchase:
+        weight: 191
+        enabled: false
+      stories:
+        weight: 192
+        enabled: false
+      styles:
+        weight: 193
+        enabled: false
+      triple_content_item:
+        weight: 194
         enabled: false
 field_type: entity_reference_revisions
