Created Infographic REST API

--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_infographic.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_infographic.default.yml
@@ -5,15 +5,16 @@ dependencies:
   config:
     - field.field.paragraph.block_infographic.field_alignment
     - field.field.paragraph.block_infographic.field_background_image
-    - field.field.paragraph.block_infographic.field_link
     - field.field.paragraph.block_infographic.field_new_heading
     - field.field.paragraph.block_infographic.field_paragraph
     - field.field.paragraph.block_infographic.field_paragraph_image
+    - field.field.paragraph.block_infographic.field_primary_link
     - field.field.paragraph.block_infographic.field_scroll_id
+    - field.field.paragraph.block_infographic.field_secondary_link
     - field.field.paragraph.block_infographic.field_styles
     - paragraphs.paragraphs_type.block_infographic
   module:
-    - entity_reference_revisions
+    - paragraphs
     - text
 id: paragraph.block_infographic.default
 targetEntityType: paragraph
@@ -29,29 +30,26 @@ content:
   field_background_image:
     weight: 5
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
-    region: content
-  field_link:
-    weight: 7
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_new_heading:
     weight: 3
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_paragraph:
     weight: 4
@@ -64,11 +62,26 @@ content:
   field_paragraph_image:
     weight: 6
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
+    region: content
+  field_primary_link:
+    type: entity_reference_paragraphs
+    weight: 7
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
     region: content
   field_scroll_id:
     weight: 2
@@ -78,14 +91,29 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_secondary_link:
+    type: entity_reference_paragraphs
+    weight: 8
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
+    region: content
   field_styles:
     weight: 0
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
 hidden:
   created: true
