--- a/source/drupal/var/drupal-config/sync/field.field.paragraph.background_image.field_normal.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.paragraph.background_image.field_normal.yml
@@ -21,8 +21,8 @@ settings:
   file_directory: '[date:custom:Y]-[date:custom:m]'
   file_extensions: 'png gif jpg jpeg'
   max_filesize: ''
-  max_resolution: 1440x520
-  min_resolution: 1440x520
+  max_resolution: ''
+  min_resolution: ''
   alt_field: true
   alt_field_required: true
   title_field: false
