--- a/source/drupal/var/drupal-config/sync/field.field.paragraph.background_image.field_small.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.paragraph.background_image.field_small.yml
@@ -21,8 +21,8 @@ settings:
   file_directory: '[date:custom:Y]-[date:custom:m]'
   file_extensions: 'png gif jpg jpeg'
   max_filesize: ''
-  max_resolution: 750x1050
-  min_resolution: 750x1050
+  max_resolution: ''
+  min_resolution: ''
   alt_field: false
   alt_field_required: true
   title_field: false
