--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_target_audience.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_target_audience.default.yml
@@ -10,7 +10,6 @@ dependencies:
     - field.field.paragraph.block_target_audience.field_styles
     - paragraphs.paragraphs_type.block_target_audience
   module:
-    - entity_reference_revisions
     - paragraphs
 id: paragraph.block_target_audience.default
 targetEntityType: paragraph
@@ -20,11 +19,14 @@ content:
   field_background_image:
     weight: 3
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_devices:
     type: entity_reference_paragraphs
@@ -41,11 +43,14 @@ content:
   field_new_heading:
     weight: 2
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_scroll_id:
     weight: 1
@@ -58,11 +63,14 @@ content:
   field_styles:
     weight: 0
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
 hidden:
   created: true
