Created AudienceReach REST API

--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.channel.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.channel.default.yml
@@ -4,11 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.channel.field_channel_statistics
-    - field.field.paragraph.channel.field_new_heading
+    - field.field.paragraph.channel.field_main_heading
     - field.field.paragraph.channel.field_paragraph_image
     - paragraphs.paragraphs_type.channel
   module:
-    - entity_reference_revisions
+    - paragraphs
 id: paragraph.channel.default
 targetEntityType: paragraph
 bundle: channel
@@ -22,23 +22,25 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_new_heading:
-    weight: 1
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
-    region: content
-  field_paragraph_image:
+  field_main_heading:
     weight: 0
     settings:
-      match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: string_textfield
+    region: content
+  field_paragraph_image:
+    weight: 1
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
+    type: entity_reference_paragraphs
     region: content
 hidden:
   created: true
