--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_audience_reach.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_audience_reach.default.yml
@@ -9,7 +9,6 @@ dependencies:
     - field.field.paragraph.block_audience_reach.field_styles
     - paragraphs.paragraphs_type.block_audience_reach
   module:
-    - entity_reference_revisions
     - paragraphs
 id: paragraph.block_audience_reach.default
 targetEntityType: paragraph
@@ -31,11 +30,14 @@ content:
   field_new_heading:
     weight: 2
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_scroll_id:
     weight: 1
@@ -48,11 +50,14 @@ content:
   field_styles:
     weight: 0
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
 hidden:
   created: true
