--- a/source/drupal/var/drupal-config/sync/core.entity_view_display.paragraph.channel.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_view_display.paragraph.channel.default.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.channel.field_channel_statistics
-    - field.field.paragraph.channel.field_new_heading
+    - field.field.paragraph.channel.field_main_heading
     - field.field.paragraph.channel.field_paragraph_image
     - paragraphs.paragraphs_type.channel
   module:
@@ -22,14 +22,13 @@ content:
     third_party_settings: {  }
     type: string
     region: content
-  field_new_heading:
-    weight: 1
+  field_main_heading:
+    weight: 3
     label: above
     settings:
-      view_mode: default
-      link: ''
+      link_to_entity: false
     third_party_settings: {  }
-    type: entity_reference_revisions_entity_view
+    type: string
     region: content
   field_paragraph_image:
     weight: 0
